welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:39: error: type mismatch;
 found   : Unit
 required: Boolean
    if(getDirection()==Direction.EST)
    ^SnakeBuggle:30: error: type mismatch;
 found   : Unit
 required: Boolean
  if(estFaceMur())
  ^